--- a/.github/workflows/tryhackme-badge-workflow.yml
+++ b/.github/workflows/tryhackme-badge-workflow.yml
@@ -2,8 +2,7 @@ name: TryHackMe Update Badge
 
 on:
   schedule:
-    # Make it run every 24 hour
-    - cron: '0 0 * * *'
+    - cron: "0 */6 * * *"
   workflow_dispatch:
 jobs:
   tryhackme-badge-update:
@@ -13,6 +12,5 @@ jobs:
       - uses: actions/checkout@v2
       - uses: p4p1/tryhackme-badge-workflow@main
         with:
-          # Replace with your tryhackme username
           username: "zephrous"
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
